# mcp-cornell-resume

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
docs/: requirements.txt
prompts/: cornell_summary_prompt.txt
resources/: notion_block_template.json
services/: content.py  notion.py  openai.py  pinecone.py
tools/: create_cornell_resume.py
